some simple changes, hopefully more to come

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</script>
 	</head>
 
-	<body style="min-width: 1338px; min-height: 689px;">
+	<body>
 		<div id="fullpage">
 			<div id="mainSec" class="section">
 				<div class="title">
