beginning the long process of redisning maybe. Need to start somewhere

--- a/index.html
+++ b/index.html
@@ -34,33 +34,48 @@
 		<div id="fullpage">
 			<div id="mainSec" class="section">
 				<div class="title">
-					[ David Woldenberg ]
+					<span>[ David Woldenberg ]</span>
 				</div>
 				<div class="subtitle">
-					{ Programmer | Student | Entrepreneur }
+					<span>{ Programmer | Student | Entrepreneur }</span>
 				</div>
 				<main>
 					<ul>
-			        	<a href="#about"><li class="about" data-menuanchor="about"><i class="fa fa-user"></i><span>About</span></li></a>
-			        	<a href="#projects"><li class="projects span2" data-menuanchor="projects"><i class="fa proj fa-cubes"></i><i class="fa proj fa-database"></i><i class="fa proj fa-server"></i><span style="padding-left: 40%;">Projects</span></li></a>
-			        	<a href="#contactme"><li class="contactme" data-menuanchor="contactme"><i class="fa fa-phone"></i><span>Contact Me</span></li></a>
-			        	<a href="#k4kdata"><li class="k4k" data-menuanchor="k4kdata"><i class="fa fa-graduation-cap"></i><span>K4K</span></li></a>
-			        	<a href="#ihwdata"><li class="ihw" data-menuanchor="ihwdata"><i class="fa fa-desktop"></i><span>iHW</span></li></a>
-			        	<a href="#livingdata"><li class="living" data-menuanchor="livingdata"><i class="fa fa-globe"></i><span>Living Planet</span></li></a>
-			        	<a href="#hwchrondata"><li class="hwchron" data-menuanchor="hwchrondata"><i class="fa fa-newspaper-o"></i><span>HW Chronicle</span></li></a>
+			        	<a href="#about">
+			        		<li class="about" data-menuanchor="about"><i class="fa fa-user"></i><span>About</span></li>
+			        	</a>			   
+			        	<a href="#contactme">
+			        		<li class="contactme" data-menuanchor="contactme"><i class="fa fa-phone"></i><span>Contact Me</span></li>
+			        	</a>
+			        	<a href="#projects">
+			        		<li class="projects span2" data-menuanchor="projects"><i class="fa proj fa-cubes"></i><i class="fa proj fa-database"></i><i class="fa proj fa-server"></i><span style="padding-left: 40%;">Projects</span></li>
+			        	</a>
+			        	<a href="#k4kdata">
+			        		<li class="k4k" data-menuanchor="k4kdata"><i class="fa fa-graduation-cap"></i><span>K4K</span></li>
+			        	</a>
+			        	<a href="#ihwdata">
+			        		<li class="ihw" data-menuanchor="ihwdata"><i class="fa fa-desktop"></i><span>iHW</span></li>
+			        	</a>
+			        	<a href="#livingdata">
+			        		<li class="living" data-menuanchor="livingdata"><i class="fa fa-globe"></i><span>Living Planet</span></li>
+			        	</a>
+			        	<a href="#hwchrondata">
+			        		<li class="hwchron" data-menuanchor="hwchrondata"><i class="fa fa-newspaper-o"></i><span>HW Chronicle</span></li>
+			        	</a>
 			        </ul>
 			    </main>
 			</div>
 			<div id="About" class="section">
-				<div id="aboutPhoto">
-				</div>
-				<div id="about-title">
-					<span>About Me</span>
-				</div>
-				<div id="about-body">
-				<p>My Name is David Woldenberg and I am a programmer. I became interested in the art after an introductory course in ninth grade and have since enthralled myself in it. My expertise is in web programming, but I am actively learning iOS development and pretty much anything that interests me.</p>
-				<br> 
-				<p>I graduated from Harvard Westlake School, where I took four years of comptuer science courses. I am now a student at the University of Chicago, where I am majoring in Computer Science and Economics. I mostly like to create web apps and web sites, but I'm always open to working on something new and exciting.</p>
+				<div class="about-cont">
+					<div id="about-title">
+						<span>About Me</span>
+					</div>
+					<div id="about-body">
+						<p>My Name is David Woldenberg and I am a programmer. I became interested in the art after an introductory course in ninth grade and have since enthralled myself in it. My expertise is in web programming, but I am actively learning iOS development and pretty much anything that interests me.</p>
+						<br> 
+						<p>I graduated from Harvard Westlake School, where I took four years of comptuer science courses. I am now a student at the University of Chicago, where I am majoring in Computer Science and Economics. I mostly like to create web apps and web sites, but I'm always open to working on something new and exciting.</p>
+					</div>
+					<div id="aboutPhoto"></div>
 				</div>
 			</div>
 			<div id="Projects" class="section">
