misc styling stuff I forgot to commit

--- a/index.html
+++ b/index.html
@@ -67,15 +67,17 @@
 			</div>
 			<div id="About" class="section">
 				<div class="about-cont">
-					<div id="about-title">
-						<span>About Me</span>
+					<div class="full-cont">
+						<img id="aboutPhoto" src="http://i.imgur.com/paeHAZP.jpg" />
+						<div id="about-title">
+							<span>About Me</span>
+						</div>
+						<div id="about-body">
+							<p>My Name is David Woldenberg and I am a programmer. I became interested in the art after an introductory course in ninth grade and have since enthralled myself in it. My expertise is in web programming, but I am actively learning iOS development and pretty much anything that interests me.</p>
+							<br> 
+							<p>I graduated from Harvard Westlake School, where I took four years of comptuer science courses. I am now a student at the University of Chicago, where I am majoring in Computer Science and Economics. I mostly like to create web apps and web sites, but I'm always open to working on something new and exciting.</p>
+						</div>
 					</div>
-					<div id="about-body">
-						<p>My Name is David Woldenberg and I am a programmer. I became interested in the art after an introductory course in ninth grade and have since enthralled myself in it. My expertise is in web programming, but I am actively learning iOS development and pretty much anything that interests me.</p>
-						<br> 
-						<p>I graduated from Harvard Westlake School, where I took four years of comptuer science courses. I am now a student at the University of Chicago, where I am majoring in Computer Science and Economics. I mostly like to create web apps and web sites, but I'm always open to working on something new and exciting.</p>
-					</div>
-					<div id="aboutPhoto"></div>
 				</div>
 			</div>
 			<div id="Projects" class="section">
