messing around some more

--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
 
 	    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="http://dwold.com/public/css/style.css" />
+		<link rel="stylesheet" href="/public/css/style.css" />
 		
 		<link href="/public/img/favicon.ico" rel="icon" type="image/x-icon">
 
@@ -54,7 +54,8 @@
 			</div>
 		</div>
 		<div class="bottom-new">
-			<img id='d-home' src="/public/img/d.svg" height=50 width=50 />
+			<object id='d-home' type="image/svg+xml" data="/public/img/d.svg" height=50 width=50></object>
+			<!-- <img id='d-home' src="/public/img/d.svg" height=50 width=50 /> -->
 		</div>
 		<div class="bottom" style='display: none;'>
 			<div class="contact" id="email">
