its coming along!

--- a/test.html
+++ b/test.html
@@ -24,7 +24,7 @@
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="/public/css/nstyle.css" />
 		
-		<link href="/public/img/favicon.ico" rel="icon" type="image/x-icon">
+		<link href="/public/img/favicon2.ico" rel="icon" type="image/x-icon">
 
 		<!--Adapted from: https://www.codecademy.com/MrMKenyon/codebits/79Stl2/edit-->
 
@@ -45,7 +45,7 @@
 				<div data-menuanchor="about-sect" class="menu-item" id="about">
 					<a href="#about-sect"><span>About</span></a>
 				</div>
-				<div data-menuanchor="projects-sect" class="menu-item" id="projects">
+				<div data-menuanchor="project-sect" class="menu-item" id="projects">
 					<a href="#project-sect"><span>Projects</span></a>
 				</div>
 				<div data-menuanchor="contact-sect" class="menu-item" id="contact-me">
@@ -55,16 +55,52 @@
 		</div>
 		<div id="main-cont">
 			<div id="main-sect-cont" class="section">
-				Stuff
 			</div>
 			<div id="about-sect-cont" class="section">
-				Some Stuff
+				<div>
+				</div>
 			</div>
 			<div id="projects-sect-cont" class="section">
-				Some more stuff
+				<div id="proj-cont">
+					<div class="proj-entry">
+						<div class="proj-title proj">
+							<span>iHW - </span>
+						</div>
+						<div class="proj-desc proj">
+							<span>An integrated display system for the my high scool's schedule, personalized to each student's schedule. I worked on the backend code and developed the CMS for administration of all of the application's resources. I primarily worked with RedBeanPHP and the PHP formatting engine Twig. You can check it out <a href="http://ihwapp.com/" target="_blank">here at the homepage</a></span>
+						</div>
+					</div>
+					<div class="proj-entry">
+						<div class="proj-title proj">
+							<span>This website - </span>
+						</div>
+						<div class="proj-desc proj">
+							<span>Used Three.js, fullPage.js, as well my own creative direction</span>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div id="contact-sect-cont" class="section">
-				even more stuff
+				<div class='contact-bar'>
+					<div class="contact-item" id="email">
+						<a href="mailto:dwoldenberg1@gmail.com"><i class="fa fa-envelope"></i></a>
+					</div>
+					<div class="contact-item" id="link">
+						<a href="http://www.linkedin.com/pub/david-woldenberg/aa/b45/825" target="_blank"><i class="fa fa-linkedin"></i></a>
+					</div>
+					<div class="contact-item" id="git">
+						<a href="http://github.com/dwoldenberg1" target="_blank"><i class="fa fa-github"></i></a>
+					</div>
+					<div class="contact-item" id="stack">
+						<a href="http://stackoverflow.com/users/2698266/wold" target="_blank"><i class="fa fa-stack-overflow"></i></a>
+					</div>
+					<div class="contact-item" id="fb">
+						<a href="https://www.facebook.com/david.woldenberg.7" target="_blank"><i class="fa fa-facebook"></i></a>
+					</div>
+					<div class="contact-item" id="twitt">
+						<a href="https://twitter.com/goldenwolden" target="_blank"><i class="fa fa-twitter"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="bottom">
