--- a/test.html
+++ b/test.html
@@ -8,6 +8,8 @@
 		<!--Big thanks to Mike Kenyon (https://www.codecademy.com/MrMKenyon/codebits/79Stl2) and to Alvaro Trigo(http://alvarotrigo.com/fullPage/) -->
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	    <script type="text/javascript" src="/public/js/nfunction.js"></script>
+	    <script type="text/javascript" src="/public/js/jquery.slimscroll.min.js"></script>
+	    <script type="text/javascript" src="/public/js/scrolloverflow.min.js"></script>
 	    <script type="text/javascript" src="/public/js/jquery.fullPage.js"></script>
 	    <script type="text/javascript" src="/public/js/three.js"></script>
 
@@ -64,18 +66,42 @@
 				<div id="proj-cont">
 					<div class="proj-entry">
 						<div class="proj-title proj">
-							<span>iHW - </span>
+							<span>Pirate Panic - </span>
 						</div>
 						<div class="proj-desc proj">
-							<span>An integrated display system for the my high scool's schedule, personalized to each student's schedule. I worked on the backend code and developed the CMS for administration of all of the application's resources. I primarily worked with RedBeanPHP and the PHP formatting engine Twig. You can check it out <a href="http://ihwapp.com/" target="_blank">here at the homepage</a></span>
+							<span>A game that I worked with some classmates for my Video Game Design CMSC 23800 class. It was a boat racing game in which you raced other ships as a merchant, while also trying to evade the pirate. The game was written in C++ using the OGRE graphics engine and boost. It was a ton of fun to work on, <a href="https://github.com/VjiaoBlack/codename-ted" target="_blank">you can check out the code here.</a></span>
 						</div>
 					</div>
 					<div class="proj-entry">
 						<div class="proj-title proj">
-							<span>This website - </span>
+							<span>asdfinance - </span>
 						</div>
 						<div class="proj-desc proj">
-							<span>Used Three.js, fullPage.js, as well my own creative direction</span>
+							<span>My project for YHack 2016 that visualizes financial data in real time with the LEDs on a corsair keyboard. It uses Intuit's mint API, chart.js, Corsair's cue-sdk, and flask. You can check out our entry <a href="https://devpost.com/software/asdfinance" target="_blank">here on devpost</a> or <a href="https://github.com/darrentu/asdfinance" target="_blank">here on github.</a></span>
+						</div>
+					</div>
+					<div class="proj-entry">
+						<div class="proj-title proj">
+							<span>food me - </span>
+						</div>
+						<div class="proj-desc proj">
+							<span>My Project for Hack Harvard 2015 that incorporates basic machine learning and customer interaction. The App used Yelp's IOS API and would suggest restaurants to you based on a series of answers you gave it. Eventually, it would learn your preferences and suggest a restuarant to you upon opening the app. <a href="https://devpost.com/software/foodme-dwt1p0" target="_blank">You can check out the devpost on the project here.</a></span>
+						</div>
+					</div>
+					<div class="proj-entry">
+						<div class="proj-title proj">
+							<span>iHW - </span>
+						</div>
+						<div class="proj-desc proj">
+							<span>An integrated display system for the my high scool's schedule, personalized to each student's schedule. I worked on the backend code and developed the CMS for administration of all of the application's resources. I primarily worked with RedBeanPHP and the PHP formatting engine Twig. You can check it out <a href="http://ihwapp.com/" target="_blank">here at the homepage.</a></span>
+						</div>
+					</div>
+					<div class="proj-entry">
+						<div class="proj-title proj">
+							<span>K4K - </span>
+						</div>
+						<div class="proj-desc proj">
+							<span>One of my earliest projects from high school, where I led programming workshops with a friend for younger, mostly under-privileged children. We primarrily taught scratch and html basics but also had some cool workshops with 3D modeling and printing, as well some in robotics and basic javascript games. I made the website for the workshops <a href="http://k4k.dwold.com/about" target="_blank">which you can check out here.</a></span>
 						</div>
 					</div>
 				</div>
