major changes, close to final version maybe. re-factored some of the callbacks, added spanning procedural tiles, added 'spooky box', refined glitch interaction, more to come.

--- a/test.html
+++ b/test.html
@@ -59,7 +59,10 @@
 			<div id="main-sect-cont" class="section">
 			</div>
 			<div id="about-sect-cont" class="section">
-				<div>
+				<div class='about-body'>
+					<span>My name is david and I love to program. I am a student at the University of Chicago where I study computer science and psychology. I hope to one apply these two passions of mine to the world through the code that I write.</span>
+					<br><br>
+					<span>Some of my passions include camping (hiking and canoeing), sailing, 
 				</div>
 			</div>
 			<div id="projects-sect-cont" class="section">
