background fix for about, cleaned up header

--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="detectify-verification" 
-    			content="b0a9db528e2be60512632426449c6c97" />
 		<title>David Woldenberg</title>
-		<!--Big thanks to Mike Kenyon (https://www.codecademy.com/MrMKenyon/codebits/79Stl2) and to Alvaro Trigo(http://alvarotrigo.com/fullPage/) -->
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+		
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	    <script type="text/javascript" src="/public/js/nfunction.js"></script>
 	    <script type="text/javascript" src="/public/js/jquery.slimscroll.min.js"></script>
 	    <script type="text/javascript" src="/public/js/scrolloverflow.min.js"></script>
@@ -22,8 +20,8 @@
 	    <script type="text/javascript" src="/public/js/DigitalGlitch.js"></script>
 	    <script type="text/javascript" src="/public/js/CopyShader.js"></script>
 
-	    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+	    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"> -->
 		<link rel="stylesheet" href="/public/css/nstyle.css" />
 		
 		<link href="/public/img/favicon2.ico" rel="icon" type="image/x-icon">
@@ -60,12 +58,15 @@
 			</div>
 			<div id="about-sect-cont" class="section">
 				<div id='about-body'>
-					<span>My name is david and I love to program. I'm a student at the University of Chicago where I study computer science and psychology. I hope to one day apply these two passions of mine to the world through the code that I write. I'm always looking to learn something new about programming, and always interested in the cool project that you are (probably) working on. Currently, I am spending most of my time learning about machine learning and trying to contribute to some of the open source libraries and websites that I use most often.</span>
-					<br><br>
-					<span>One of my other greatest passions is being outdoors. Whether its camping, hiking, sailing, or any other form of adventuring I'm always game. One of my favorite hidden gems is Northwern Wisconsin and Lake Superior, known of course by many Midwesterns, but by very few outside of that part of the United States. The California coast is another beautiful part of the country, home to some of the most breathtaking landscapes I've ever been in. There are still many places I want to go and things I want to see, and my list is ever-growing. I have recently knocked skydiving off my bucket list, who knows whats next!</span>
-					<br><br>
-					<span>I like to spend my free time endulging my creative side, whether its working on a project or over a stove in the kitchen. I love to cook and I defintely think that has both influenced and been influenced by my growing love for coding. I like to think of myself as an equal parts front-end and back-end developer, but I often enjoy the freedoms you can employ when designing and implementing an interface. I'd love to talk with you about your thoughts on any of this, so please don't hesitate to shoot me an email.</span>
-					<br><br>
+					<div>
+						<span>My name is david and I love to program. I'm a student at the University of Chicago where I study computer science and psychology. I hope to one day apply these two passions of mine to the world through the code that I write. I'm always looking to learn something new about programming, and always interested in the cool project that you are (probably) working on. Currently, I am spending most of my time learning about machine learning and trying to contribute to some of the open source libraries and websites that I use most often.<span>
+					</div>
+					<div>
+						<span>One of my other greatest passions is being outdoors. Whether its camping, hiking, sailing, or any other form of adventuring I'm always game. One of my favorite hidden gems is Northwern Wisconsin and Lake Superior, known of course by many Midwesterns, but by very few outside of that part of the United States. The California coast is another beautiful part of the country, home to some of the most breathtaking landscapes I've ever been in. There are still many places I want to go and things I want to see, and my list is ever-growing. I have recently knocked skydiving off my bucket list, who knows whats next!</span>
+					</div>
+					<div>
+						<span>I like to spend my free time endulging my creative side, whether its working on a project or over a stove in the kitchen. I love to cook and I defintely think that has both influenced and been influenced by my growing love for coding. I like to think of myself as an equal parts front-end and back-end developer, but I often enjoy the freedoms you can employ when designing and implementing an interface. I'd love to talk with you about your thoughts on any of this, so please don't hesitate to shoot me an email.</span>
+					</div>
 				</div>
 			</div>
 			<div id="projects-sect-cont" class="section">
