--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	    <script type="text/javascript" src="/public/js/DigitalGlitch.js"></script>
 	    <script type="text/javascript" src="/public/js/CopyShader.js"></script>
 
-	    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'> -->
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="/public/css/nstyle.css" />
 		
 		<link href="/public/img/favicon2.ico" rel="icon" type="image/x-icon">
