removing old domain, now a porn link lol

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>David Woldenberg</title>
-		
+
 		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	    <script type="text/javascript" src="/public/js/nfunction.js"></script>
 	    <script type="text/javascript" src="/public/js/jquery.slimscroll.min.js"></script>
@@ -65,7 +65,7 @@
 						<span>One of my other greatest passions is being outdoors. Whether its camping, hiking, sailing, or any other form of adventuring I'm always game. One of my favorite hidden gems is Northwern Wisconsin and Lake Superior, known of course by many Midwesterns, but by very few outside of that part of the United States. The California coast is another beautiful part of the country, home to some of the most breathtaking landscapes I've ever been in. There are still many places I want to go and things I want to see, and my list is ever-growing. I have recently knocked skydiving off my bucket list, who knows whats next!</span>
 					</div>
 					<div>
-						<span>I like to spend my free time endulging my creative side, whether its working on a project or over a stove in the kitchen. I love to cook and I defintely think that has both influenced and been influenced by my growing love for coding. I like to think of myself as an equal parts front-end and back-end developer, but I often enjoy the freedoms you can employ when designing and implementing an interface. I'd love to talk with you about your thoughts on any of this, so please don't hesitate to shoot me an email.</span>
+						<span>I like to spend my free time indulging my creative side, whether its working on a project or over a stove in the kitchen. I love to cook and I defintely think that has both influenced and been influenced by my growing love for coding. I like to think of myself as an equal parts front-end and back-end developer, but I often enjoy the freedoms you can employ when designing and implementing an interface. I'd love to talk with you about your thoughts on any of this, so please don't hesitate to shoot me an email.</span>
 					</div>
 				</div>
 			</div>
@@ -79,7 +79,7 @@
 							<span>Pirate Panic - </span>
 						</div>
 						<div class="proj-desc proj">
-							<span>A game that I worked on with some classmates for my Video Game Design CMSC 23800 class. It is a racing game in which you raced other ships as a merchant while also trying to evade the pirate. The game was written in C++ using the OGRE graphics engine and boost. It was a ton of fun to work on, <a href="https://github.com/VjiaoBlack/codename-ted" target="_blank">you can check out the code here.</a></span>
+							<span>A game that I worked on with some classmates for my Video Game Design CMSC 23800 class. It is a racing game in which you raced other ships as a merchant while also trying to evade the pirate. It has functioning AI (using the A* Search algorithm) and procedural terrain generation.The game was written in C++ using the OGRE graphics engine and boost. It was a ton of fun to work on, <a href="https://github.com/VjiaoBlack/codename-ted" target="_blank">you can check out the code here.</a></span>
 						</div>
 					</div>
 					<div class="proj-entry">
@@ -103,7 +103,7 @@
 							<span>iHW - </span>
 						</div>
 						<div class="proj-desc proj">
-							<span>An fully-integrated display system for my high school's schedule, personalized to each student's schedule. I worked on the backend code and developed the CMS for administration of all of the application's resources. I primarily worked with RedBeanPHP and the PHP formatting engine Twig. You can check it out <a href="http://ihwapp.com/" target="_blank">here at the homepage.</a></span>
+							<span>An fully-integrated display system for my high school's schedule, personalized to each student's schedule. I worked on the backend code and developed the CMS for administration of all of the application's resources. I primarily worked with RedBeanPHP and the PHP formatting engine Twig.
 						</div>
 					</div>
 					<div class="proj-entry">
