jquery to https

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>David Woldenberg</title>
 
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 	    <script type="text/javascript" src="/public/js/nfunction.js"></script>
 	    <script type="text/javascript" src="/public/js/jquery.slimscroll.min.js"></script>
 	    <script type="text/javascript" src="/public/js/scrolloverflow.min.js"></script>
